--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,10 @@
 
     <!-- Responsive viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    <meta
+      name="google-site-verification"
+      content="ijmXmfnBuzLOciy0cUNZFilXePiQhoY6JNms4hizDa8"
+    />
     <!-- Theme color for mobile browsers -->
     <meta name="theme-color" content="#000000" />
 
