--- a/public/index.html
+++ b/public/index.html
@@ -8,38 +8,63 @@
 
     <!-- Responsive viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Google Site Verification -->
     <meta
       name="google-site-verification"
       content="ijmXmfnBuzLOciy0cUNZFilXePiQhoY6JNms4hizDa8"
     />
-    <!-- Theme color for mobile browsers -->
+
+    <!-- Theme color -->
     <meta name="theme-color" content="#000000" />
 
-    <!-- Description for search engines -->
+    <!-- SEO: Primary Meta Description -->
     <meta
       name="description"
-      content="Official website of St Antony's Matriculation & Higher Secondary School providing quality education and resources."
+      content="St Antony's Matriculation & Higher Secondary School, Thiruthuraipoondi – Providing quality education, academic excellence, and holistic development since inception."
+    />
+
+    <!-- Keywords for SEO -->
+    <meta
+      name="keywords"
+      content="St Antony's School, Thiruthuraipoondi, Matriculation School, Higher Secondary School, Best School in Thiruthuraipoondi, Tamil Nadu Education"
     />
 
     <!-- SEO Robots instructions -->
     <meta name="robots" content="index, follow" />
 
-    <!-- Open Graph tags for social media sharing -->
-    <meta property="og:title" content="ST ANTONY'S MAT. CUL. HR. SEC. SCHOOL" />
+    <!-- Open Graph Tags (for Facebook, LinkedIn etc.) -->
+    <meta
+      property="og:title"
+      content="St Antony's School - Thiruthuraipoondi"
+    />
     <meta
       property="og:description"
-      content="Official website of St Antony's Matriculation & Higher Secondary School providing quality education and resources."
+      content="Visit the official website of St Antony's Matriculation & Higher Secondary School, Thiruthuraipoondi. Learn about our curriculum, admissions, and values."
     />
     <meta property="og:url" content="https://st-antonys-school.netlify.app" />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="%PUBLIC_URL%/schoolbanner.jpg" />
 
-    <!-- Apple touch icon for iOS -->
+    <!-- Twitter Card Tags (optional) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="St Antony's School - Thiruthuraipoondi"
+    />
+    <meta
+      name="twitter:description"
+      content="Explore St Antony's Matriculation & Higher Secondary School in Thiruthuraipoondi. Quality education meets community values."
+    />
+    <meta name="twitter:image" content="%PUBLIC_URL%/schoolbanner.jpg" />
+
+    <!-- iOS Icon -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-    <!-- Manifest file -->
+    <!-- Manifest -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>ST ANTONY'S MAT. CUL. HR. SEC. SCHOOL</title>
+    <title>St Antony's School – Thiruthuraipoondi</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
